# taskiq-postgresql

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  docker-compose.yml  pyproject.toml
.github/: CONTRIBUTING.md  FUNDING.yml  dependabot.yml  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  docs.yml  performance.yml  security.yml
scripts/: release.py  test-all-drivers.sh
taskiq_postgresql/: __init__.py  broker.py  exceptions.py  result_backend.py  scheduler_source.py
taskiq_postgresql/abc/: driver.py  query.py
taskiq_postgresql/drivers/: __init__.py  _asyncpg.py  _psqlpy.py  _psycopg.py
taskiq_postgresql/utils/: __init__.py  get_db_driver.py  get_db_listen_driver.py  libs_available.py
tests/: conftest.py  test_broker.py  test_result_backend.py  test_scheduler_source.py
